--- a/src/App.css
+++ b/src/App.css
@@ -1,106 +1,61 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 :root {
   --font-size-base: 1.6rem;
+  --blue-dark: #1e415e;
+  --blue-medium: #1c6176;
+  --blue-light: #3483aa;
+  --gray: #55565a;
+  --black: #231f20;
+  --white: #fff;
+}
+
+/* Fonts */
+
+@font-face {
+  font-family: 'Oxygen-Bold';
+  src: url('./fonts/Oxygen-Bold.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Oxygen-Light';
+  src: url('./fonts/Oxygen-Light.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Oxygen-Regular';
+  src: url('./fonts/Oxygen-Regular.ttf') format('ttf');
 }
 
 html {
-  font-size: 62.5%; /* 10px */
+  font-size: 62.5%;
+  /* 10px */
 }
 
 body {
   font-size: var(--font-size-base);
+  font-family: 'Oxygen-Regular';
   /* font-size: 1.6rem; 16px */
 }
 
-.welcome {
-  border: 1px solid lime;
+h1,
+h2,
+h3 {
+  font-family: 'Oxygen-Bold';
 }
 
-nav > ul {
-  display: flex;
-  justify-content: space-around;
-}
-
+ul,
 li {
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
 
-li > a {
+a {
   text-decoration: none;
-  color: white;
 }
 
-/* Mission Carousel */
-
-.mission-carousel > .mission-carousel__list {
-  display: flex;
-  justify-content: space-around;
+main {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
-
-.mission-carousel__list-item {
-  width: 20rem;
-  min-width: 20rem;
-  background-image: url(//unsplash.it/300/300);
-  background-size: cover;
-  height: 20rem;
-  display: flex;
-  align-items: center;
-  padding: 0 5rem;
-  border-radius: 100%;
-}
-
-.mission-carousel__link {
-  font-size: 1.4rem;
-  /* display: block; */
-}
-
-.mission-carousel__link-span:first-of-type {
-  border: 1px solid lime;
-  padding-bottom: 1rem;
-  font-size: 1.8rem;
-}
-
-.mission-carousel__link-span {
-  display: block;
-  text-align: center;
-}
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
