--- a/src/MissionCarousel/MissionCarousel.css
+++ b/src/MissionCarousel/MissionCarousel.css
@@ -6,17 +6,34 @@
 }
 
 .mission-carousel__list-item {
-  width: 20rem;
-  min-width: 20rem;
-  background-image: url(//unsplash.it/300/300);
+  width: 22rem;
+  min-width: 22rem;
+  height: 22rem;
+  /* background-image: url(//unsplash.it/400/400); */
   background-size: cover;
-  height: 20rem;
   display: flex;
   align-items: center;
   padding: 0 5rem;
   border-radius: 100%;
   transition: all 0.2s ease-in-out;
 }
+
+.mission-carousel__list-item:nth-child(1) {
+  background-image: url(//unsplash.it/500/505);
+}
+.mission-carousel__list-item:nth-child(2) {
+  background-image: url(//unsplash.it/500/500);
+}
+.mission-carousel__list-item:nth-child(3) {
+  background-image: url(//unsplash.it/400/401);
+}
+.mission-carousel__list-item:nth-child(4) {
+  background-image: url(//unsplash.it/400/403);
+}
+.mission-carousel__list-item:nth-child(5) {
+  background-image: url(//unsplash.it/400/404);
+}
+
 .mission-carousel__list-item:hover {
   transform: scale(1.2);
 }
