--- a/src/MissionCarousel/MissionCarousel.css
+++ b/src/MissionCarousel/MissionCarousel.css
@@ -1,21 +1,24 @@
 /* Mission Carousel */
 
-.mission-carousel > .mission-carousel__list {
+/* .mission-carousel > .mission-carousel__list {
   display: flex;
   justify-content: space-around;
+} */
+.mission-carousel {
+  padding: 9rem 0;
 }
-
 .mission-carousel__list-item {
-  width: 22rem;
-  min-width: 22rem;
-  height: 22rem;
+  width: 18rem;
+  min-width: 18rem;
+  height: 18rem;
   /* background-image: url(//unsplash.it/400/400); */
   background-size: cover;
   display: flex;
   align-items: center;
-  padding: 0 5rem;
+  /* padding: 0 5rem; */
   border-radius: 100%;
   transition: all 0.2s ease-in-out;
+  /* background-color: teal; */
 }
 
 .mission-carousel__list-item:nth-child(1) {
@@ -36,24 +39,47 @@
 
 .mission-carousel__list-item:hover {
   transform: scale(1.2);
+  /* background-color: rgba(#000, #000, #000, 1); */
 }
 
 .mission-carousel__link {
   font-size: 1.4rem;
   color: white;
-  /* display: block; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* flex-basis: 100%; */
+  height: 100%;
+  width: 100%;
+  border: 1px solid black;
+  overflow: hidden;
+  border-radius: 100%;
+  overflow: hidden;
+  justify-content: center;
+  opacity: 0.8;
+  background-color: #598898;
 }
+
+.mission-carousel__link:hover {
+  opacity: 0.9;
+  background: #8f647d;
+}
+
 .mission-carousel__list-item:hover .mission-carousel__link {
-  color: red;
+  color: #fff;
+  text-decoration: none;
 }
 
 .mission-carousel__link-span:first-of-type {
-  border: 1px solid lime;
+  border: 1px solid black;
   padding-bottom: 1rem;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
 }
 
 .mission-carousel__link-span {
-  display: block;
+  /* display: block; */
   text-align: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  line-height: 1.3;
 }
