--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -3,3 +3,9 @@
   margin-top: 10rem;
   padding: 2rem 0;
 }
+
+.footer-text {
+  font-size: 1.4rem;
+  color: silver;
+  /* color: var(--white, #fff); */
+}
