--- a/src/Checkpoint/checkpoint.css
+++ b/src/Checkpoint/checkpoint.css
@@ -1,4 +1,11 @@
+.checkpoint-icon-wrap {
+  /* width: 10%; */
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .checkpoint-icon {
-  width: 10%;
-  border: 1px solid red;
+  width: 80%;
 }
