--- a/src/MissionCarousel/MissionCarousel.css
+++ b/src/MissionCarousel/MissionCarousel.css
@@ -14,7 +14,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.mission-carousel__list-item:nth-child(1) {
+/* .mission-carousel__list-item:nth-child(1) {
   background-image: url(//unsplash.it/500/505);
 }
 .mission-carousel__list-item:nth-child(2) {
@@ -28,7 +28,7 @@
 }
 .mission-carousel__list-item:nth-child(5) {
   background-image: url(//unsplash.it/400/404);
-}
+} */
 
 .mission-carousel__list-item:hover {
   transform: scale(1.2);
@@ -37,7 +37,7 @@
 
 .mission-carousel__link {
   font-size: 1.4rem;
-  color: var(--white, #fff);
+  color: var(--yellow, #ffed00);
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -46,17 +46,20 @@
   border-radius: 100%;
   overflow: hidden;
   justify-content: center;
-  opacity: 0.8;
-  background-color: var(--blue-medium, #1c6176);
+  /* opacity: 0.8; */
+  /* background-color: var(--blue-medium, #1c6176); */
+  background-color: var(--black, #000);
+  transition: all 0.2s ease-in-out;
 }
 
 .mission-carousel__link:hover {
-  opacity: 0.8;
-  background: var(--maroon, #6f2d53);
+  /* opacity: 0.8; */
+  background: var(--yellow, #ffed00);
+  /* color: black; */
 }
 
 .mission-carousel__list-item:hover .mission-carousel__link {
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
@@ -75,3 +78,8 @@
   line-height: 1.3;
   font-weight: 900;
 }
+
+/* .mission-carousel__link.active {
+  color: red !important;
+  transform: scale(1.2);
+} */
