Change px to REM on body ptop

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
 }
 
 body {
-  padding-top: 200px; /*  navbar if fixed, need to add spcace*/
+  padding-top: 20rem; /*  navbar if fixed, need to add spcace*/
 }
 
 main {
