Saving work - Better svgs, working logic

--- a/src/Accordion/Accordion.css
+++ b/src/Accordion/Accordion.css
@@ -103,3 +103,13 @@
 .card {
   border-radius: none;
 }
+
+
+.svg-circle {
+  fill: var(--blue-bright);
+}
+
+.svg-checkmark-blue {
+  fill: var(--blue-bright);
+  stroke: var(--blue-bright);
+}
