--- a/src/MissionCarousel/MissionCarousel.css
+++ b/src/MissionCarousel/MissionCarousel.css
@@ -2,6 +2,7 @@
 
 .mission-carousel {
   padding: 9rem 0;
+  padding-top: 4.5rem;
 }
 .mission-carousel__list-item {
   width: 19rem;
@@ -37,7 +38,8 @@
 
 .mission-carousel__link {
   font-size: 1.4rem;
-  color: var(--yellow, #ffed00);
+  color: white;
+  /* color: var(--yellow, #ffed00); */
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -48,18 +50,20 @@
   justify-content: center;
   /* opacity: 0.8; */
   /* background-color: var(--blue-medium, #1c6176); */
-  background-color: var(--black, #000);
+  background-color: var(--black-light);
   transition: all 0.2s ease-in-out;
 }
 
 .mission-carousel__link:hover {
   /* opacity: 0.8; */
-  background: var(--yellow, #ffed00);
+  /* background: var(--yellow, #ffed00); */
+  background-color: var(--blue-bright);
   /* color: black; */
 }
 
 .mission-carousel__list-item:hover .mission-carousel__link {
-  color: #000;
+  /* color: #000; */
+  color: #fff;
   text-decoration: none;
 }
 
